--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "srv/blackroad-api/server_full.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node srv/blackroad-api/server_full.js",
-    "dev": "nodemon srv/blackroad-api/server_full.js",
+    "start": "next start",
+    "dev": "next dev",
     "seed": "node scripts/seed_admin.js",
     "prepare": "husky",
     "lint": "eslint srv/blackroad-api/server_full.js tests/api_health.test.js tests/git_api.test.js",
@@ -17,11 +17,12 @@
     "typecheck": "echo 'no typecheck'",
     "health": "node scripts/health.js",
     "dev:site": "npm --prefix sites/blackroad run dev",
-    "build": "npm --prefix sites/blackroad run build",
+    "build": "next build && node scripts/build-codex-index.js",
     "test-agents-pack": "node tests/test_agents_mega.js",
     "frontend:dev": "npm --prefix sites/blackroad run dev",
     "frontend:build": "npm --prefix sites/blackroad run build",
-    "fix-anything": "node .github/tools/codex-apply.js .github/prompts/codex-fix-anything.md || true"
+    "fix-anything": "node .github/tools/codex-apply.js .github/prompts/codex-fix-anything.md || true",
+    "demo": "brc plm:items:load --dir fixtures/plm/items && brc plm:bom:load --dir fixtures/plm/boms && brc mfg:wc:load --file fixtures/mfg/work_centers.csv && brc mfg:routing:load --dir fixtures/mfg/routings && brc mfg:routing:capcheck --item PROD-100 --rev B --qty 1000 && brc mfg:wi:render --item PROD-100 --rev B && brc mfg:spc:analyze --op OP-200 --window 50 && brc mfg:yield --period 2025-09 && brc mfg:mrp --demand artifacts/sop/allocations.csv --inventory fixtures/mfg/inventory.csv --pos fixtures/mfg/open_pos.csv && brc mfg:coq --period 2025-Q3"
   },
   "engines": {
     "node": ">=20"
@@ -54,7 +55,7 @@
     "husky": "^9.0.10",
     "lint-staged": "^16.1.5"
   },
-    "lint-staged": {
+  "lint-staged": {
     "*.{js,jsx,mjs,cjs,ts,tsx}": [
       "eslint --fix",
       "prettier -w"
