feat: add artifacts browser and hash verification

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,5 @@ jobs:
           test "$A1" = "$A2"
       - name: Contract validation
         run: python scripts/validate_contracts.py
+      - name: Artifacts hash
+        run: bash scripts/hash_artifacts.sh || true
