--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,14 +1,8 @@
 version: 2
 updates:
-  - package-ecosystem: "npm"
+  - package-ecosystem: npm
+    directory: "/apps/api"
+    schedule: { interval: weekly }
+  - package-ecosystem: github-actions
     directory: "/"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "pip"
-    directory: "/"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "docker"
-    directory: "/"
-    schedule:
-      interval: "daily"
+    schedule: { interval: weekly }
