--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,30 +1,34 @@
 {
   "name": "blackroad-api",
-  "version": "0.1.1",
+  "version": "0.2.1",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "tsx src/server.ts",
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc -p tsconfig.json && prisma generate || true",
     "start": "node dist/server.js",
+    "migrate": "prisma migrate deploy || true",
+    "migrate:dev": "prisma migrate dev --name init || true",
     "lint": "eslint . || true",
     "test": "node --test",
-    "test:jest": "jest --passWithNoTests"
+    "release": "semantic-release"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "morgan": "^1.10.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.0"
+    "dotenv": "^16.4.0",
+    "express": "^4.19.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "semantic-release": "^24.0.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/commit-analyzer": "^13.0.0",
+    "@semantic-release/release-notes-generator": "^14.0.1",
     "typescript": "^5.4.0",
     "tsx": "^4.7.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "@types/jest": "^29.5.12",
     "eslint": "^9.0.0",
     "prettier": "^3.3.3"
   }
