--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,10 @@ env:
 jobs:
   build-test-push:
     runs-on: ubuntu-latest
+    environment:
+      name: production
+      url: https://blackroad.io
+      reviewers: ['blackboxprogramming']
 
     steps:
       - uses: actions/checkout@v4
