--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,2 +1,10 @@
 PORT=4000
 GITHUB_WEBHOOK_SECRET=<REPLACE_ME>
+# Okta SSO
+OKTA_ISSUER=https://{yourOktaDomain}
+OKTA_CLIENT_ID={yourClientId}
+OKTA_CLIENT_SECRET={clientSecret}
+OKTA_REDIRECT_URI=https://blackroad.io/api/auth/okta/callback
+# Warehouse
+WAREHOUSE_URL=<REPLACE_ME>
+WAREHOUSE_TOKEN=<REPLACE_ME>
