--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,7 +17,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.0",
     "express": "^4.19.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "openid-client": "^6.6.0",
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
     "semantic-release": "^24.0.0",
