feat: add SSO and governance utilities

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,12 @@ OPENAI_API_KEY=
 DATABASE_URL=postgres://prism:prism@localhost:5432/prism # pragma: allowlist secret
 S3_BUCKET=prism-artifacts
 PRISM_RUN_ALLOW=node
+# Okta SSO
+OKTA_ISSUER=https://{yourOktaDomain}
+OKTA_CLIENT_ID=
+OKTA_CLIENT_SECRET=
+OKTA_REDIRECT_URI=https://blackroad.io/api/auth/okta/callback
+
+# Data warehouse
+WAREHOUSE_URL=
+WAREHOUSE_TOKEN=
