--- a/.sops.yaml
+++ b/.sops.yaml
@@ -1,5 +1,5 @@
 creation_rules:
   - path_regex: \.env\.enc$
-    encrypted_regex: ^(.*)$
-    age: # Insert your age recipient(s)
-      - <REPLACE_ME_PUBLIC_KEY>
+    encrypted_regex: '^(.*)$'
+    age:
+      - age1examplepublickeyreplace
