--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "tsx src/server.ts",
+    "dev": "node --require ./src/lib/otel.ts dist/server.js || tsx src/server.ts",
     "build": "tsc -p tsconfig.json && prisma generate || true",
     "start": "node dist/server.js",
     "migrate": "prisma migrate deploy || true",
@@ -19,7 +19,12 @@
     "express": "^4.19.2",
     "morgan": "^1.10.0",
     "openid-client": "^6.6.0",
-    "node-fetch": "^3.3.0"
+    "node-fetch": "^3.3.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/sdk-node": "^0.51.1",
+    "@opentelemetry/auto-instrumentations-node": "^0.51.1",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.51.1",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.51.1"
   },
   "devDependencies": {
     "semantic-release": "^24.0.0",
