feat: add revops and support automation

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -8,3 +8,15 @@ OKTA_REDIRECT_URI=https://blackroad.io/api/auth/okta/callback
 # Warehouse
 WAREHOUSE_URL=<REPLACE_ME>
 WAREHOUSE_TOKEN=<REPLACE_ME>
+# RevOps / Connectors
+HUBSPOT_TOKEN=<REPLACE_ME>
+SALESFORCE_URL=<REPLACE_ME>
+SALESFORCE_TOKEN=<REPLACE_ME>
+JIRA_BASE=<REPLACE_ME>
+JIRA_USER=<REPLACE_ME>
+JIRA_TOKEN=<REPLACE_ME>
+JIRA_PROJECT=<REPLACE_ME>
+LINEAR_TOKEN=<REPLACE_ME>
+LINEAR_TEAM=<REPLACE_ME>
+SLACK_WEBHOOK=<REPLACE_ME>
+TEAMS_WEBHOOK=<REPLACE_ME>
