--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -8,3 +8,8 @@ OKTA_REDIRECT_URI=https://blackroad.io/api/auth/okta/callback
 # Warehouse
 WAREHOUSE_URL=<REPLACE_ME>
 WAREHOUSE_TOKEN=<REPLACE_ME>
+# Billing & Sales Ops
+BILLING_FROM_ENTITY=BlackRoad Inc.
+DUNNING_EMAIL_WEBHOOK=<REPLACE_ME>
+CRM_WAREHOUSE_URL=<REPLACE_ME>
+CRM_WAREHOUSE_TOKEN=<REPLACE_ME>
