--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,7 +19,8 @@
     "express": "^4.19.2",
     "morgan": "^1.10.0",
     "openid-client": "^6.6.0",
-    "node-fetch": "^3.3.0"
+    "node-fetch": "^3.3.2",
+    "mustache": "^4.2.0"
   },
   "devDependencies": {
     "semantic-release": "^24.0.0",
