--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -8,3 +8,6 @@ OKTA_REDIRECT_URI=https://blackroad.io/api/auth/okta/callback
 # Warehouse
 WAREHOUSE_URL=<REPLACE_ME>
 WAREHOUSE_TOKEN=<REPLACE_ME>
+# Security & Compliance
+STAGING_URL=<REPLACE_ME>
+RETENTION_DAYS=365
