feat: add data platform and mlops stack

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -8,3 +8,6 @@ OKTA_REDIRECT_URI=https://blackroad.io/api/auth/okta/callback
 # Warehouse
 WAREHOUSE_URL=<REPLACE_ME>
 WAREHOUSE_TOKEN=<REPLACE_ME>
+ML_QUALITY_GATE_AUC=0.72
+EXPERIMENT_COOKIE=br_exp
+MATOMO_ENDPOINT=<REPLACE_ME>
