--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,7 +19,10 @@
     "express": "^4.19.2",
     "morgan": "^1.10.0",
     "openid-client": "^6.6.0",
-    "node-fetch": "^3.3.0",
+    "node-fetch": "^3.3.2",
+    "ajv": "^8.12.0",
+    "node-cache": "^5.1.2",
+    "cookie-parser": "^1.4.6",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/sdk-node": "^0.51.1",
     "@opentelemetry/auto-instrumentations-node": "^0.51.1",
