feat: add developer platform components

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -8,3 +8,8 @@ OKTA_REDIRECT_URI=https://blackroad.io/api/auth/okta/callback
 # Warehouse
 WAREHOUSE_URL=<REPLACE_ME>
 WAREHOUSE_TOKEN=<REPLACE_ME>
+# Developer Platform
+API_KEY_ROTATION_DAYS=90
+RATE_LIMIT_WINDOW_SEC=60
+RATE_LIMIT_MAX=600
+WEBHOOK_SIGNING_SECRET=<REPLACE_ME>
