--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,12 +19,15 @@
     "express": "^4.19.2",
     "morgan": "^1.10.0",
     "openid-client": "^6.6.0",
-    "node-fetch": "^3.3.0",
+    "node-fetch": "^3.3.2",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/sdk-node": "^0.51.1",
     "@opentelemetry/auto-instrumentations-node": "^0.51.1",
     "@opentelemetry/exporter-trace-otlp-http": "^0.51.1",
-    "@opentelemetry/exporter-metrics-otlp-http": "^0.51.1"
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.51.1",
+    "node-cache": "^5.1.2",
+    "uuid": "^9.0.1",
+    "ajv": "^8.12.0"
   },
   "devDependencies": {
     "semantic-release": "^24.0.0",
