--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -8,3 +8,9 @@ OKTA_REDIRECT_URI=https://blackroad.io/api/auth/okta/callback
 # Warehouse
 WAREHOUSE_URL=<REPLACE_ME>
 WAREHOUSE_TOKEN=<REPLACE_ME>
+# Monetization & Licenses
+STRIPE_API_KEY=<REPLACE_ME>
+STRIPE_OVERAGE_PRICE_ID=<REPLACE_ME>
+LICENSE_SIGNING_SECRET=<REPLACE_ME>
+# Status
+STATUS_BASE_URL=https://blackroad.io/status
