feat: add global scale and ux hardening

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -11,3 +11,15 @@ WAREHOUSE_TOKEN=<REPLACE_ME>
 # Security & Compliance
 STAGING_URL=<REPLACE_ME>
 RETENTION_DAYS=365
+# Global scale & cache
+REGIONS=us,eu,apac
+DEFAULT_REGION=us
+REDIS_URL=<REPLACE_ME>  # optional
+# SMTP/Twilio/WebPush
+SMTP_URL=<REPLACE_ME>         # e.g. smtp://user:pass@smtp.example.com:587
+TWILIO_SID=<REPLACE_ME>
+TWILIO_TOKEN=<REPLACE_ME>
+TWILIO_FROM=<REPLACE_ME>
+WEBPUSH_PUBLIC_KEY=<REPLACE_ME>
+WEBPUSH_PRIVATE_KEY=<REPLACE_ME>
+WEBPUSH_CONTACT=mailto:support@blackroad.io
