--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,12 +21,16 @@
     "express": "^4.19.2",
     "morgan": "^1.10.0",
     "openid-client": "^6.6.0",
-    "node-fetch": "^3.3.0",
+    "node-fetch": "^3.3.2",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/sdk-node": "^0.51.1",
     "@opentelemetry/auto-instrumentations-node": "^0.51.1",
     "@opentelemetry/exporter-trace-otlp-http": "^0.51.1",
-    "@opentelemetry/exporter-metrics-otlp-http": "^0.51.1"
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.51.1",
+    "lru-cache": "^10.2.0",
+    "ioredis": "^5.4.1",
+    "ajv": "^8.12.0",
+    "web-push": "^3.6.6"
   },
   "devDependencies": {
     "semantic-release": "^24.0.0",
