feat: add agent command bus and workflows

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -11,3 +11,7 @@ WAREHOUSE_TOKEN=<REPLACE_ME>
 # Security & Compliance
 STAGING_URL=<REPLACE_ME>
 RETENTION_DAYS=365
+# Agents & Chat
+SLACK_SIGNING_SECRET=<REPLACE_ME>
+DISCORD_APP_TOKEN=<REPLACE_ME>
+CHANGE_APPROVAL_SECRET=<REPLACE_ME>
