feat: add agent command bus and autopilot

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -23,3 +23,7 @@ TWILIO_FROM=<REPLACE_ME>
 WEBPUSH_PUBLIC_KEY=<REPLACE_ME>
 WEBPUSH_PRIVATE_KEY=<REPLACE_ME>
 WEBPUSH_CONTACT=mailto:support@blackroad.io
+# Agents & Chat
+SLACK_SIGNING_SECRET=<REPLACE_ME>
+DISCORD_APP_TOKEN=<REPLACE_ME>
+CHANGE_APPROVAL_SECRET=<REPLACE_ME>
