--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,6 +22,8 @@
     "morgan": "^1.10.0",
     "openid-client": "^6.6.0",
     "node-fetch": "^3.3.2",
+    "uuid": "^9.0.1",
+    "yaml": "^2.5.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/sdk-node": "^0.51.1",
     "@opentelemetry/auto-instrumentations-node": "^0.51.1",
