feat(exec-ops): add okr kpi forecasting and dashboards

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -23,3 +23,7 @@ TWILIO_FROM=<REPLACE_ME>
 WEBPUSH_PUBLIC_KEY=<REPLACE_ME>
 WEBPUSH_PRIVATE_KEY=<REPLACE_ME>
 WEBPUSH_CONTACT=mailto:support@blackroad.io
+# Exec Ops
+PROM_URL=<REPLACE_ME>
+FINANCE_CSV_URL=<REPLACE_ME>
+SLACK_WEBHOOK_EXEC=<REPLACE_ME>
