feat(partner): partner ecosystem and marketplace

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -23,3 +23,7 @@ TWILIO_FROM=<REPLACE_ME>
 WEBPUSH_PUBLIC_KEY=<REPLACE_ME>
 WEBPUSH_PRIVATE_KEY=<REPLACE_ME>
 WEBPUSH_CONTACT=mailto:support@blackroad.io
+# Partner Ecosystem
+PARTNER_REVIEW_SLACK_WEBHOOK=<REPLACE_ME>
+OAUTH_SIGNING_SECRET=<REPLACE_ME>
+MARKETPLACE_BASE_URL=https://blackroad.io/marketplace
