feat: add enterprise IT integrations

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -23,3 +23,21 @@ TWILIO_FROM=<REPLACE_ME>
 WEBPUSH_PUBLIC_KEY=<REPLACE_ME>
 WEBPUSH_PRIVATE_KEY=<REPLACE_ME>
 WEBPUSH_CONTACT=mailto:support@blackroad.io
+
+# SAML SSO
+SAML_ENTITY_ID=https://blackroad.io/saml/metadata
+SAML_ASSERTION_URL=https://blackroad.io/saml/acs
+SAML_IDP_METADATA_URL=<REPLACE_ME>
+SAML_CERT=<REPLACE_ME_PEM>
+SAML_PRIVATE_KEY=<REPLACE_ME_PEM>
+
+# SCIM
+SCIM_BEARER_TOKEN=<REPLACE_ME>
+
+# BYOK / KMS
+KMS_PROVIDER=local
+KMS_KEY_ID=<REPLACE_ME>
+KMS_REGION=<REPLACE_ME>
+
+# DLP
+DLP_REGEXES=[{"pattern":"[\\w._%+-]+@[\\w.-]+\\.[A-Za-z]{2,}","replace":"[EMAIL]"},{"pattern":"\\b\\d{3}-\\d{2}-\\d{4}\\b","replace":"[SSN]"},{"pattern":"\\b\\d{4} \\d{4} \\d{4} \\d{4}\\b","replace":"[CARD]"}]
