--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,21 +16,27 @@
     "audit": "npm audit || true"
   },
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.51.1",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.51.1",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.51.1",
+    "@opentelemetry/sdk-node": "^0.51.1",
+    "adm-zip": "^0.5.10",
+    "ajv": "^8.12.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.0",
     "express": "^4.19.2",
-    "morgan": "^1.10.0",
-    "openid-client": "^6.6.0",
-    "node-fetch": "^3.3.2",
-    "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/sdk-node": "^0.51.1",
-    "@opentelemetry/auto-instrumentations-node": "^0.51.1",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.51.1",
-    "@opentelemetry/exporter-metrics-otlp-http": "^0.51.1",
-    "lru-cache": "^10.2.0",
     "ioredis": "^5.4.1",
-    "ajv": "^8.12.0",
-    "web-push": "^3.6.6"
+    "jsonwebtoken": "^9.0.2",
+    "lru-cache": "^10.2.0",
+    "morgan": "^1.10.0",
+    "node-fetch": "^3.3.2",
+    "openid-client": "^6.6.0",
+    "uuid": "^9.0.1",
+    "web-push": "^3.6.6",
+    "xmlbuilder2": "^4.0.2",
+    "yaml": "^2.5.0"
   },
   "devDependencies": {
     "semantic-release": "^24.0.0",
