fix: correct route imports in test helper

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -27,3 +27,6 @@ WEBPUSH_CONTACT=mailto:support@blackroad.io
 PROM_URL=<REPLACE_ME>
 FINANCE_CSV_URL=<REPLACE_ME>
 SLACK_WEBHOOK_EXEC=<REPLACE_ME>
+# Quality/E2E
+BASE_URL=http://localhost:4000
+CHAOS_ENABLED=false
