--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,7 +13,9 @@
     "test": "node --test",
     "release": "semantic-release",
     "zap": "echo \"run zap scan (stub)\"",
-    "audit": "npm audit || true"
+    "audit": "npm audit || true",
+    "test:ci": "node --test --coverage",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -43,6 +45,14 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.0",
     "eslint": "^9.0.0",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "fast-check": "^3.17.0",
+    "@pact-foundation/pact": "^12.4.0",
+    "@pact-foundation/pact-core": "^12.4.0",
+    "@stryker-mutator/core": "^8.2.0",
+    "@stryker-mutator/jest-runner": "^8.2.0"
   }
 }
