feat(privacy): add governance layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -27,3 +27,7 @@ WEBPUSH_CONTACT=mailto:support@blackroad.io
 PROM_URL=<REPLACE_ME>
 FINANCE_CSV_URL=<REPLACE_ME>
 SLACK_WEBHOOK_EXEC=<REPLACE_ME>
+# Privacy & Governance
+PRIVACY_OFFICER_EMAIL=privacy@blackroad.io
+PRIVACY_EXPORT_DIR=data/privacy/exports
+DEFAULT_LAWFUL_BASIS=legitimate_interests
