feat(itsm): add on-call and incident management

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -27,3 +27,8 @@ WEBPUSH_CONTACT=mailto:support@blackroad.io
 PROM_URL=<REPLACE_ME>
 FINANCE_CSV_URL=<REPLACE_ME>
 SLACK_WEBHOOK_EXEC=<REPLACE_ME>
+# ITSM / On-Call
+ONCALL_DEFAULT_TEAM=platform
+INCIDENT_CHANNEL=#incidents
+STATUS_FEED_PATH=apps/status/feed.json
+PAGER_SMS_FROM=<REPLACE_ME>
