--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,7 +30,9 @@
     "lru-cache": "^10.2.0",
     "ioredis": "^5.4.1",
     "ajv": "^8.12.0",
-    "web-push": "^3.6.6"
+    "web-push": "^3.6.6",
+    "uuid": "^9.0.1",
+    "yaml": "^2.5.0"
   },
   "devDependencies": {
     "semantic-release": "^24.0.0",
