--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -30,3 +30,6 @@ SLACK_WEBHOOK_EXEC=<REPLACE_ME>
 # Quality/E2E
 BASE_URL=http://localhost:4000
 CHAOS_ENABLED=false
+# Enterprise Admin & Controls
+PROCUREMENT_CURRENCY=USD
+EXEC_APPROVER_EMAIL=exec@blackroad.io
