feat(clm): add contract lifecycle management layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -30,3 +30,7 @@ SLACK_WEBHOOK_EXEC=<REPLACE_ME>
 # Quality/E2E
 BASE_URL=http://localhost:4000
 CHAOS_ENABLED=false
+# CLM
+ESIGN_WEBHOOK_SECRET=<REPLACE_ME>
+LEGAL_DEFAULT_APPROVER=legal@blackroad.io
+CLM_RENEWAL_DAYS=90,60,30
