feat(support): add help center and support desk

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -33,3 +33,7 @@ CHAOS_ENABLED=false
 # Enterprise Admin & Controls
 PROCUREMENT_CURRENCY=USD
 EXEC_APPROVER_EMAIL=exec@blackroad.io
+# Support & Help Center
+SUPPORT_INBOX_ADDRESS=support@blackroad.io
+SUPPORT_DEFAULT_SLA=standard
+SUPPORT_EMAIL_PARSER_SECRET=<REPLACE_ME>
