feat: add marketing automation layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -33,3 +33,7 @@ CHAOS_ENABLED=false
 # Enterprise Admin & Controls
 PROCUREMENT_CURRENCY=USD
 EXEC_APPROVER_EMAIL=exec@blackroad.io
+# Marketing
+MKT_EMAIL_FROM=marketing@blackroad.io
+MKT_SMS_FROM=<REPLACE_ME>
+MKT_DEFAULT_SPLIT=50
