feat: add warehouse and BI dashboards

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -33,3 +33,8 @@ CHAOS_ENABLED=false
 # Enterprise Admin & Controls
 PROCUREMENT_CURRENCY=USD
 EXEC_APPROVER_EMAIL=exec@blackroad.io
+# Warehouse & BI
+WH_TYPE=local
+WH_URI=./warehouse/data
+WH_CATALOG=warehouse/catalog/datasets.yaml
+BI_DEFAULT_TIMEZONE=America/Chicago
