--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,7 +33,8 @@
     "ioredis": "^5.4.1",
     "ajv": "^8.12.0",
     "web-push": "^3.6.6",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "yaml": "^2.5.0"
   },
   "devDependencies": {
     "semantic-release": "^24.0.0",
