--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -37,3 +37,6 @@ EXEC_APPROVER_EMAIL=exec@blackroad.io
 SUPPORT_INBOX_ADDRESS=support@blackroad.io
 SUPPORT_DEFAULT_SLA=standard
 SUPPORT_EMAIL_PARSER_SECRET=<REPLACE_ME>
+# Product Management
+RELEASE_TRAIN_CHANNEL=#releases
+PRODUCT_REVIEWERS_DEFAULT=product@blackroad.io
