--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -37,3 +37,8 @@ EXEC_APPROVER_EMAIL=exec@blackroad.io
 SUPPORT_INBOX_ADDRESS=support@blackroad.io
 SUPPORT_DEFAULT_SLA=standard
 SUPPORT_EMAIL_PARSER_SECRET=<REPLACE_ME>
+# CPQ & Orders
+CPQ_DEFAULT_CURRENCY=USD
+CPQ_DISCOUNT_APPROVAL_PCT=15
+CPQ_QUOTE_EXPIRE_DAYS=30
+CPQ_APPROVER_EMAIL=sales-approver@blackroad.io
