--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -40,3 +40,9 @@ SUPPORT_EMAIL_PARSER_SECRET=<REPLACE_ME>
 # Product Management
 RELEASE_TRAIN_CHANNEL=#releases
 PRODUCT_REVIEWERS_DEFAULT=product@blackroad.io
+
+# CPQ & Orders
+CPQ_DEFAULT_CURRENCY=USD
+CPQ_DISCOUNT_APPROVAL_PCT=15
+CPQ_QUOTE_EXPIRE_DAYS=30
+CPQ_APPROVER_EMAIL=sales-approver@blackroad.io
