feat: add AI assistants and promptops

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -40,3 +40,8 @@ SUPPORT_EMAIL_PARSER_SECRET=<REPLACE_ME>
 # Product Management
 RELEASE_TRAIN_CHANNEL=#releases
 PRODUCT_REVIEWERS_DEFAULT=product@blackroad.io
+# AI Assistants & PromptOps
+AI_DEFAULT_MODEL=gpt-4o
+AI_MAX_TOKENS=2048
+AI_SAFETY_MODE=standard
+AI_PROVIDER_API_KEY=<REPLACE_ME>
