feat(soc): add threat operations layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -40,3 +40,7 @@ SUPPORT_EMAIL_PARSER_SECRET=<REPLACE_ME>
 # Product Management
 RELEASE_TRAIN_CHANNEL=#releases
 PRODUCT_REVIEWERS_DEFAULT=product@blackroad.io
+# SOC & ThreatOps
+SOC_DEFAULT_SEVERITY=medium
+SOC_ANALYST_CHANNEL=#soc-analysts
+SOC_FEED_API_KEY=<REPLACE_ME>
