feat: add data quality and contracts layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -46,3 +46,8 @@ CPQ_DEFAULT_CURRENCY=USD
 CPQ_DISCOUNT_APPROVAL_PCT=15
 CPQ_QUOTE_EXPIRE_DAYS=30
 CPQ_APPROVER_EMAIL=sales-approver@blackroad.io
+
+# Data Quality & Contracts
+DQ_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+DQ_INCIDENT_SEV=Sev-3
+DQ_DEFAULT_OWNER=data@blackroad.io
