feat(cpm): add corporate performance management layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -46,3 +46,7 @@ CPQ_DEFAULT_CURRENCY=USD
 CPQ_DISCOUNT_APPROVAL_PCT=15
 CPQ_QUOTE_EXPIRE_DAYS=30
 CPQ_APPROVER_EMAIL=sales-approver@blackroad.io
+# Corporate Performance Management
+CPM_DEFAULT_HORIZON=12
+CPM_FORECAST_REVIEWERS=fpna@blackroad.io
+CPM_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
