feat(esg): add sustainability tracking and reporting

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -46,3 +46,8 @@ CPQ_DEFAULT_CURRENCY=USD
 CPQ_DISCOUNT_APPROVAL_PCT=15
 CPQ_QUOTE_EXPIRE_DAYS=30
 CPQ_APPROVER_EMAIL=sales-approver@blackroad.io
+
+# ESG & Sustainability
+ESG_DEFAULT_FACTOR_SET=default
+ESG_REPORT_REVIEWER_EMAIL=esg-review@blackroad.io
+ESG_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
