feat: add treasury risk layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -46,3 +46,8 @@ CPQ_DEFAULT_CURRENCY=USD
 CPQ_DISCOUNT_APPROVAL_PCT=15
 CPQ_QUOTE_EXPIRE_DAYS=30
 CPQ_APPROVER_EMAIL=sales-approver@blackroad.io
+
+# Treasury & Risk
+TREASURY_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+TREASURY_VAR_CL=0.99
+TREASURY_POLICY_OWNER=treasury@blackroad.io
