feat: add tax and regulatory reporting

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -50,3 +50,8 @@ CPQ_APPROVER_EMAIL=sales-approver@blackroad.io
 CPM_DEFAULT_HORIZON=12
 CPM_FORECAST_REVIEWERS=fpna@blackroad.io
 CPM_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+
+# Tax & Regulatory
+TAX_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+TAX_DEFAULT_COUNTRY=US
+EINV_DEFAULT_CHANNEL=peppol
