feat(sox): add internal controls layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -50,3 +50,7 @@ CPQ_APPROVER_EMAIL=sales-approver@blackroad.io
 CPM_DEFAULT_HORIZON=12
 CPM_FORECAST_REVIEWERS=fpna@blackroad.io
 CPM_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+# SOX / Internal Controls
+SOX_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+SOX_DEFAULT_PERIOD=2025Q3
+SOX_EVIDENCE_HASH_MODE=sha256
