--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -35,7 +35,8 @@
     "web-push": "^3.6.6",
     "uuid": "^9.0.1",
     "yaml": "^2.5.0",
-    "mustache": "^4.2.0"
+    "mustache": "^4.2.0",
+    "crypto-js": "^4.2.0"
   },
   "devDependencies": {
     "semantic-release": "^24.0.0",
