feat: add revrec layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -50,3 +50,8 @@ CPQ_APPROVER_EMAIL=sales-approver@blackroad.io
 CPM_DEFAULT_HORIZON=12
 CPM_FORECAST_REVIEWERS=fpna@blackroad.io
 CPM_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+
+# Revenue Recognition
+REVREC_DEFAULT_METHOD=straight
+REVREC_PACK_REVIEWERS=finance@blackroad.io
+REVREC_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
