feat(ar): add billing and collections

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -50,3 +50,7 @@ CPQ_APPROVER_EMAIL=sales-approver@blackroad.io
 CPM_DEFAULT_HORIZON=12
 CPM_FORECAST_REVIEWERS=fpna@blackroad.io
 CPM_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+# Accounts Receivable
+AR_DUNNING_BUCKETS=30,60,90,120
+AR_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+AR_LOCKBOX_BANK_IDS=LOCKBOX1,LOCKBOX2
