feat: add spend management and p2p layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -54,3 +54,7 @@ CPM_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
 SOX_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
 SOX_DEFAULT_PERIOD=2025Q3
 SOX_EVIDENCE_HASH_MODE=sha256
+# Spend Management / P2P
+P2P_MATCH_TOLERANCE_BPS=50
+P2P_POLICY_OWNER=procurement@blackroad.io
+CARDS_FEED_PROVIDERS=VISA,MASTERCARD,AMEX
