feat: add financial consolidation layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -54,3 +54,7 @@ CPM_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
 SOX_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
 SOX_DEFAULT_PERIOD=2025Q3
 SOX_EVIDENCE_HASH_MODE=sha256
+# Consolidation & Close
+CONS_BASE_CURRENCY=USD
+CONS_PACK_REVIEWERS=consolidation@blackroad.io
+CONS_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
