feat: add cost accounting and inventory

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -54,3 +54,10 @@ CPM_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
 SOX_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
 SOX_DEFAULT_PERIOD=2025Q3
 SOX_EVIDENCE_HASH_MODE=sha256
+
+# Cost & Inventory
+COST_DEFAULT_METHOD=standard
+INV_DEFAULT_LOC=MAIN
+COST_GL_INV=1400
+COST_GL_COGS=5000
+COST_GL_WIP=1300
