feat: add fixed assets and leases layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -54,3 +54,9 @@ CPM_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
 SOX_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
 SOX_DEFAULT_PERIOD=2025Q3
 SOX_EVIDENCE_HASH_MODE=sha256
+# Fixed Assets & Leases
+FA_GL_ACCUM_DEP=1500
+FA_GL_DEPR_EXP=6100
+FA_GL_GAIN_LOSS=4900
+LEASES_GL_ROU=1600
+LEASES_GL_LIAB=2100
