feat(payroll): add payroll layer with employees time pay runs

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -58,3 +58,15 @@ SOX_EVIDENCE_HASH_MODE=sha256
 P2P_MATCH_TOLERANCE_BPS=50
 P2P_POLICY_OWNER=procurement@blackroad.io
 CARDS_FEED_PROVIDERS=VISA,MASTERCARD,AMEX
+
+# Payroll
+PAYROLL_DEFAULT_COUNTRY=US
+PAYROLL_FED_WITHHOLD_RATE=0.18
+PAYROLL_SS_RATE=0.062
+PAYROLL_MED_RATE=0.0145
+PAYROLL_SUTA_RATE=0.01
+PAYROLL_ACH_ORG_ID=<REPLACE_ME>
+PAYROLL_GL_WAGES=6200
+PAYROLL_GL_TAX=2100
+PAYROLL_GL_BEN=6400
+PAYROLL_GL_CASH=1000
