feat(crm): add sales crm and revops layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -58,3 +58,9 @@ SOX_EVIDENCE_HASH_MODE=sha256
 P2P_MATCH_TOLERANCE_BPS=50
 P2P_POLICY_OWNER=procurement@blackroad.io
 CARDS_FEED_PROVIDERS=VISA,MASTERCARD,AMEX
+
+# CRM & RevOps
+CRM_DEFAULT_STAGE=Prospecting
+CRM_FORECAST_MODEL=best
+CRM_COMMISSION_RATE=0.08
+CRM_RENEWAL_WINDOW_DAYS=120
