feat: add customer success layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -58,3 +58,8 @@ SOX_EVIDENCE_HASH_MODE=sha256
 P2P_MATCH_TOLERANCE_BPS=50
 P2P_POLICY_OWNER=procurement@blackroad.io
 CARDS_FEED_PROVIDERS=VISA,MASTERCARD,AMEX
+# Customer Success
+CS_HEALTH_THRESHOLD=0.6
+CS_NPS_PROMOTER=9
+CS_NPS_DETRACTOR=6
+CS_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
