--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -70,3 +70,10 @@ PAYROLL_GL_WAGES=6200
 PAYROLL_GL_TAX=2100
 PAYROLL_GL_BEN=6400
 PAYROLL_GL_CASH=1000
+
+# FinOps
+FINOPS_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+FINOPS_DEFAULT_CURRENCY=USD
+FINOPS_COST_TAG_KEYS=project,env,owner
+FINOPS_RI_TARGET_COVERAGE=0.7
+FINOPS_ANOMALY_THRESHOLD=0.3
