feat(obs): add observability and slo framework

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -70,3 +70,7 @@ PAYROLL_GL_WAGES=6200
 PAYROLL_GL_TAX=2100
 PAYROLL_GL_BEN=6400
 PAYROLL_GL_CASH=1000
+# Observability
+OBS_DEFAULT_WINDOW=30d
+OBS_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+OBS_PAGERDUTY_ROUTING_KEY=<REPLACE_ME>
