feat: add cmdb change release patch modules

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -77,3 +77,8 @@ FINOPS_DEFAULT_CURRENCY=USD
 FINOPS_COST_TAG_KEYS=project,env,owner
 FINOPS_RI_TARGET_COVERAGE=0.7
 FINOPS_ANOMALY_THRESHOLD=0.3
+
+# CMDB & Change/Release/Patch
+CMDB_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+CHANGE_FREEZE_ENFORCE=false
+PATCH_DEFAULT_WINDOW_DAYS=14
