--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -58,3 +58,7 @@ SOX_EVIDENCE_HASH_MODE=sha256
 P2P_MATCH_TOLERANCE_BPS=50
 P2P_POLICY_OWNER=procurement@blackroad.io
 CARDS_FEED_PROVIDERS=VISA,MASTERCARD,AMEX
+# Project Accounting / PSA
+PSA_DEFAULT_RATE=150
+PSA_WIP_POLICY=unbilled_through_date
+PSA_AR_EXPORT_MODE=file
