--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -77,3 +77,8 @@ FINOPS_DEFAULT_CURRENCY=USD
 FINOPS_COST_TAG_KEYS=project,env,owner
 FINOPS_RI_TARGET_COVERAGE=0.7
 FINOPS_ANOMALY_THRESHOLD=0.3
+# BCP/DR
+BCDR_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+BCDR_DEFAULT_RTO_MIN=60
+BCDR_DEFAULT_RPO_MIN=30
+BCDR_FAILOVER_FREEZE_ENFORCE=false
