feat: add IAM zero trust layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -82,3 +82,9 @@ FINOPS_ANOMALY_THRESHOLD=0.3
 CMDB_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
 CHANGE_FREEZE_ENFORCE=false
 PATCH_DEFAULT_WINDOW_DAYS=14
+
+# IAM / Zero-Trust
+IAM_JWT_SIGNING_KEY=<REPLACE_ME>
+IAM_TOKEN_TTL_DEFAULT_S=3600
+IAM_SECRETS_KMS_KEY=<REPLACE_ME>
+IAM_PDP_MODE=hybrid
