--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -36,7 +36,8 @@
     "uuid": "^9.0.1",
     "yaml": "^2.5.0",
     "mustache": "^4.2.0",
-    "crypto-js": "^4.2.0"
+    "crypto-js": "^4.2.0",
+    "crypto": "^1.0.1"
   },
   "devDependencies": {
     "semantic-release": "^24.0.0",
