feat: add mdm data hub scaffolding

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -82,3 +82,7 @@ FINOPS_ANOMALY_THRESHOLD=0.3
 CMDB_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
 CHANGE_FREEZE_ENFORCE=false
 PATCH_DEFAULT_WINDOW_DAYS=14
+# MDM / Data Hub
+MDM_DEFAULT_THRESHOLD=0.85
+MDM_PUBLISH_MODE=file
+MDM_ID_NAMESPACE=blackroad
