feat: add privacy governance layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -82,3 +82,8 @@ FINOPS_ANOMALY_THRESHOLD=0.3
 CMDB_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
 CHANGE_FREEZE_ENFORCE=false
 PATCH_DEFAULT_WINDOW_DAYS=14
+
+# Data Privacy
+PRIVACY_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+PRIVACY_TOKEN_KMS_KEY=<REPLACE_ME>
+PRIVACY_EXPORT_BASE=s3://blackroad-privacy/exports
