feat: add aiops platform and mrm

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -82,3 +82,9 @@ FINOPS_ANOMALY_THRESHOLD=0.3
 CMDB_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
 CHANGE_FREEZE_ENFORCE=false
 PATCH_DEFAULT_WINDOW_DAYS=14
+
+# AI/ML Platform
+AIOPS_DEFAULT_ENV=prod
+AIOPS_CANARY_PERCENT=10
+AIOPS_APPROVER_EMAIL=ml-approver@blackroad.io
+AIOPS_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
