feat(aiops): add ML platform and risk management

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -88,3 +88,7 @@ IAM_JWT_SIGNING_KEY=<REPLACE_ME>
 IAM_TOKEN_TTL_DEFAULT_S=3600
 IAM_SECRETS_KMS_KEY=<REPLACE_ME>
 IAM_PDP_MODE=hybrid
+AIOPS_DEFAULT_ENV=prod
+AIOPS_CANARY_PERCENT=10
+AIOPS_APPROVER_EMAIL=ml-approver@blackroad.io
+AIOPS_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
