feat: add clm and legal ops layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -88,3 +88,9 @@ IAM_JWT_SIGNING_KEY=<REPLACE_ME>
 IAM_TOKEN_TTL_DEFAULT_S=3600
 IAM_SECRETS_KMS_KEY=<REPLACE_ME>
 IAM_PDP_MODE=hybrid
+
+# CLM & Legal Ops
+CLM_ESIGN_PROVIDER=stub
+CLM_ESIGN_API_KEY=<REPLACE_ME>
+CLM_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+CLM_REPO_EMBEDDINGS=off
