feat: add knowledge hub with search and rag

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -88,3 +88,8 @@ IAM_JWT_SIGNING_KEY=<REPLACE_ME>
 IAM_TOKEN_TTL_DEFAULT_S=3600
 IAM_SECRETS_KMS_KEY=<REPLACE_ME>
 IAM_PDP_MODE=hybrid
+
+# Knowledge / Search / RAG
+KN_DEFAULT_SPACE=default
+KN_MAX_K=10
+KN_ACL_MODE=enforce
