feat(dev-portal): add api platform and developer portal

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -92,3 +92,8 @@ AIOPS_DEFAULT_ENV=prod
 AIOPS_CANARY_PERCENT=10
 AIOPS_APPROVER_EMAIL=ml-approver@blackroad.io
 AIOPS_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+# API Platform / Dev Portal
+DEV_GW_DEFAULT_RPM=100
+DEV_GW_DEFAULT_BURST=50
+DEV_WEBHOOK_RETRY=3
+DEV_BILLING_EXPORT_MODE=file
