feat: add lakehouse and elt orchestration

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -92,3 +92,8 @@ AIOPS_DEFAULT_ENV=prod
 AIOPS_CANARY_PERCENT=10
 AIOPS_APPROVER_EMAIL=ml-approver@blackroad.io
 AIOPS_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+
+# ELT / Lakehouse
+ELT_DEFAULT_SCHEDULE=@daily
+ELT_RUN_CONCURRENCY=4
+ELT_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
