--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -97,3 +97,7 @@ DEV_GW_DEFAULT_RPM=100
 DEV_GW_DEFAULT_BURST=50
 DEV_WEBHOOK_RETRY=3
 DEV_BILLING_EXPORT_MODE=file
+# TPRM
+TPRM_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+TPRM_DEFAULT_FRAMEWORK=SIG
+TPRM_BREACH_NOTIFY_DAYS=72
