feat: add experimentation and feature flags layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -97,3 +97,8 @@ DEV_GW_DEFAULT_RPM=100
 DEV_GW_DEFAULT_BURST=50
 DEV_WEBHOOK_RETRY=3
 DEV_BILLING_EXPORT_MODE=file
+# Experimentation & Feature Flags
+EXP_DEFAULT_METHOD=bayes
+EXP_HASH_SALT=<REPLACE_ME>
+EXP_APPROVER_EMAIL=experiments-approver@blackroad.io
+EXP_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
