feat: add marketing automation scaffolding

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -101,3 +101,9 @@ DEV_BILLING_EXPORT_MODE=file
 TPRM_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
 TPRM_DEFAULT_FRAMEWORK=SIG
 TPRM_BREACH_NOTIFY_DAYS=72
+
+# Marketing Automation
+MKT_DEFAULT_ATTR_MODEL=last_click
+MKT_SENDER_EMAIL=noreply@blackroad.io
+MKT_SMS_PROVIDER_KEY=<REPLACE_ME>
+MKT_PUSH_PROVIDER_KEY=<REPLACE_ME>
