feat: add support desk module

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -101,3 +101,9 @@ DEV_BILLING_EXPORT_MODE=file
 TPRM_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
 TPRM_DEFAULT_FRAMEWORK=SIG
 TPRM_BREACH_NOTIFY_DAYS=72
+
+# Support & Service Desk
+SUPPORT_INBOX_EMAIL=support@blackroad.io
+SUPPORT_CHAT_PROVIDER_KEY=<REPLACE_ME>
+SUPPORT_PHONE_PROVIDER_KEY=<REPLACE_ME>
+SUPPORT_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
