feat(lms): add training compliance layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -101,3 +101,7 @@ DEV_BILLING_EXPORT_MODE=file
 TPRM_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
 TPRM_DEFAULT_FRAMEWORK=SIG
 TPRM_BREACH_NOTIFY_DAYS=72
+# LMS
+LMS_REMINDER_DAYS=14
+LMS_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+LMS_DEFAULT_OWNER=learning@blackroad.io
