feat: add intranet portal communications hub

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -107,3 +107,7 @@ SUPPORT_INBOX_EMAIL=support@blackroad.io
 SUPPORT_CHAT_PROVIDER_KEY=<REPLACE_ME>
 SUPPORT_PHONE_PROVIDER_KEY=<REPLACE_ME>
 SUPPORT_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+# Intranet / Comms Hub
+PORTAL_DEFAULT_CHANNELS=email,web
+PORTAL_NEWSLETTER_FROM=noreply@blackroad.io
+PORTAL_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
