feat: add facilities and workplace ops

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -107,3 +107,8 @@ SUPPORT_INBOX_EMAIL=support@blackroad.io
 SUPPORT_CHAT_PROVIDER_KEY=<REPLACE_ME>
 SUPPORT_PHONE_PROVIDER_KEY=<REPLACE_ME>
 SUPPORT_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+# Facilities & Workplace
+FAC_DEFAULT_CHECKIN_GRACE_MIN=10
+FAC_VISITOR_NDA_MD=# NDA
+FAC_BADGE_PRINTER=<REPLACE_ME>
+FAC_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
