feat(esg): add sustainability and carbon accounting

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -111,3 +111,7 @@ SUPPORT_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
 PORTAL_DEFAULT_CHANNELS=email,web
 PORTAL_NEWSLETTER_FROM=noreply@blackroad.io
 PORTAL_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+# ESG / Sustainability
+ESG_DEFAULT_FACTOR_SOURCE=DEFRA_2024
+ESG_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+ESG_ORG_BOUNDARY=global
