--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -111,3 +111,8 @@ SUPPORT_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
 PORTAL_DEFAULT_CHANNELS=email,web
 PORTAL_NEWSLETTER_FROM=noreply@blackroad.io
 PORTAL_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+
+# OKR / Portfolio
+OKR_DEFAULT_PERIOD=2025-Q3
+PPM_TEAM_LIST=Platform,Product,Data,SalesOps
+PPM_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
