feat: add ATS and onboarding modules

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -111,3 +111,9 @@ SUPPORT_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
 PORTAL_DEFAULT_CHANNELS=email,web
 PORTAL_NEWSLETTER_FROM=noreply@blackroad.io
 PORTAL_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+
+# ATS & Onboarding
+ATS_OFFER_ESIGN_PROVIDER=stub
+ATS_BGCHK_PROVIDER_KEY=<REPLACE_ME>
+ATS_DEFAULT_STAGES=Applied,Phone Screen,Interview,Offer,Accepted
+ATS_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
