--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -116,3 +116,10 @@ PORTAL_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
 OKR_DEFAULT_PERIOD=2025-Q3
 PPM_TEAM_LIST=Platform,Product,Data,SalesOps
 PPM_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+
+# Treasury
+TRE_DEFAULT_CURRENCY=USD
+TRE_PAYMENT_EXPORT_PATH=treasury/exports
+TRE_APPROVAL_THRESHOLD=50000
+TRE_SANCTIONS_CHECK=off
+TRE_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
