feat(wfm): add workforce management layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -116,3 +116,10 @@ PORTAL_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
 OKR_DEFAULT_PERIOD=2025-Q3
 PPM_TEAM_LIST=Platform,Product,Data,SalesOps
 PPM_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+
+# Workforce Management
+WFM_DEFAULT_SHIFT=STD
+WFM_GEO_REQUIRED=off
+WFM_WEEKLY_HOURS=40
+WFM_OT_MULTIPLIER=1.5
+PAYROLL_EXPORT_PATH=payroll/exports
