feat: add product analytics telemetry layer

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -123,3 +123,7 @@ TRE_PAYMENT_EXPORT_PATH=treasury/exports
 TRE_APPROVAL_THRESHOLD=50000
 TRE_SANCTIONS_CHECK=off
 TRE_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+# Product Analytics
+PA_DEFAULT_WRITE_KEY=<REPLACE_ME>
+PA_ALERT_SLACK_WEBHOOK=<REPLACE_ME>
+PA_SAMPLE_RATE=1.0
