feat: seed lucidia auto-box scaffold
Lucidia-Seed: 23064887b1469b19fa562e8afdee5e9046bedf99aa9cd7142c35e38f91e6fef2

Codex: 1 — The First Principle

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,63 +1,26 @@
 {
-  "name": "blackroad-api",
-  "version": "0.2.1",
-  "private": true,
+  "name": "@lucidia/api",
+  "version": "0.0.1",
+  "description": "Minimal Auto-Box API with ephemeral classification endpoint.",
   "type": "module",
+  "license": "Apache-2.0",
+  "main": "dist/server.js",
   "scripts": {
-    "dev": "node --require ./src/lib/otel.ts dist/server.js || tsx src/server.ts",
-    "build": "tsc -p tsconfig.json && prisma generate || true",
+    "dev": "tsx watch src/server.ts",
     "start": "node dist/server.js",
-    "migrate": "prisma migrate deploy || true",
-    "migrate:dev": "prisma migrate dev --name init || true",
-    "lint": "eslint . || true",
-    "test": "node --test",
-    "release": "semantic-release",
-    "zap": "echo \"run zap scan (stub)\"",
-    "audit": "npm audit || true",
-    "test:ci": "node --test --coverage",
-    "test:e2e": "playwright test"
+    "build": "tsc -p tsconfig.json",
+    "clean": "rimraf dist"
   },
   "dependencies": {
+    "@lucidia/ai": "^0.0.1",
+    "@lucidia/core": "^0.0.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.0",
     "express": "^4.19.2",
-    "morgan": "^1.10.0",
-    "openid-client": "^6.6.0",
-    "node-fetch": "^3.3.2",
-    "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/sdk-node": "^0.51.1",
-    "@opentelemetry/auto-instrumentations-node": "^0.51.1",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.51.1",
-    "@opentelemetry/exporter-metrics-otlp-http": "^0.51.1",
-    "lru-cache": "^10.2.0",
-    "ioredis": "^5.4.1",
-    "ajv": "^8.12.0",
-    "web-push": "^3.6.6",
-    "uuid": "^9.0.1",
-    "yaml": "^2.5.0",
-    "mustache": "^4.2.0",
-    "crypto-js": "^4.2.0",
-    "crypto": "^1.0.1"
+    "helmet": "^7.1.0"
   },
   "devDependencies": {
-    "semantic-release": "^24.0.0",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/commit-analyzer": "^13.0.0",
-    "@semantic-release/release-notes-generator": "^14.0.1",
-    "typescript": "^5.4.0",
-    "tsx": "^4.7.0",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.0",
-    "eslint": "^9.0.0",
-    "prettier": "^3.3.3",
-    "@types/jest": "^29.5.12",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "fast-check": "^3.17.0",
-    "@pact-foundation/pact": "^12.4.0",
-    "@pact-foundation/pact-core": "^12.4.0",
-    "@stryker-mutator/core": "^8.2.0",
-    "@stryker-mutator/jest-runner": "^8.2.0"
+    "rimraf": "^6.0.1",
+    "tsx": "^4.15.7",
+    "typescript": "^5.4.5"
   }
 }
