--- a/tools/tools-adapter/package.json
+++ b/tools/tools-adapter/package.json
@@ -2,6 +2,9 @@
   "name": "bbx-tools-adapter",
   "version": "1.0.0",
   "type": "module",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
