--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,7 +1,10 @@
 name: CodeQL
 on:
-  push: { branches: [main] }
-  pull_request: { branches: [main] }
+  push:
+    branches: [main, develop]
+  pull_request:
+  schedule:
+    - cron: '22 4 * * 2'
 jobs:
   analyze:
     runs-on: ubuntu-latest
@@ -9,8 +12,12 @@ jobs:
       security-events: write
       actions: read
       contents: read
+    strategy:
+      matrix:
+        language: [javascript, python]
     steps:
       - uses: actions/checkout@v4
       - uses: github/codeql-action/init@v3
-        with: { languages: javascript }
+        with:
+          languages: ${{ matrix.language }}
       - uses: github/codeql-action/analyze@v3
