--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,8 +1,16 @@
-/infra/            @platform-team
-/flows/            @integration-team
-/monitors/         @sre-team
-/runbooks/         @platform-team
-/apps/api/       @platform-team
-/apps/web-public/ @platform-team
-/ops/            @sre-team
-/scripts/        @platform-team
+# Default maintainers review
+*                       @blackboxprogramming/maintainers
+
+# Security-sensitive paths require sec-review
+.github/workflows/**    @blackboxprogramming/maintainers @blackboxprogramming/sec-review
+/infra/**               @platform-team @blackboxprogramming/maintainers @blackboxprogramming/sec-review
+/scripts/**             @platform-team @blackboxprogramming/maintainers @blackboxprogramming/sec-review
+
+# Domain ownership
+/infra/                 @platform-team
+/flows/                 @integration-team
+/monitors/              @sre-team
+/runbooks/              @platform-team
+/apps/api/              @platform-team
+/apps/web-public/       @platform-team
+/ops/                   @sre-team
