Add Node 20 workflows, secret tooling, and Pi agent

--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "dev": "next dev",
     "seed": "node scripts/seed_admin.js",
     "prepare": "husky",
-    "lint": "eslint srv/blackroad-api/server_full.js tests/api_health.test.js tests/git_api.test.js",
+    "lint": "eslint .",
     "format": "prettier . --write",
     "format:check": "prettier package.json tests/api_health.test.js srv/lucidia-llm/test_app.py var/www/blackroad/.prettierrc.json .prettierrc.json RUNME.sh Makefile .github/workflows/ci.yml CLEANUP_PLAN.md CLEANUP_DECISIONS.md CLEANUP_RESULTS.md ROLLBACK.md CHANGELOG.md --check --ignore-unknown",
     "test": "npx jest",
-    "typecheck": "echo 'no typecheck'",
+    "typecheck": "tsc -p tsconfig.json",
     "health": "node scripts/health.js",
     "dev:site": "npm --prefix sites/blackroad run dev",
     "build": "next build && node scripts/build-codex-index.js",
@@ -22,7 +22,10 @@
     "frontend:dev": "npm --prefix sites/blackroad run dev",
     "frontend:build": "npm --prefix sites/blackroad run build",
     "fix-anything": "node .github/tools/codex-apply.js .github/prompts/codex-fix-anything.md || true",
-    "demo": "brc plm:items:load --dir fixtures/plm/items && brc plm:bom:load --dir fixtures/plm/boms && brc mfg:wc:load --file fixtures/mfg/work_centers.csv && brc mfg:routing:load --dir fixtures/mfg/routings && brc mfg:routing:capcheck --item PROD-100 --rev B --qty 1000 && brc mfg:wi:render --item PROD-100 --rev B && brc mfg:spc:analyze --op OP-200 --window 50 && brc mfg:yield --period 2025-09 && brc mfg:mrp --demand artifacts/sop/allocations.csv --inventory fixtures/mfg/inventory.csv --pos fixtures/mfg/open_pos.csv && brc mfg:coq --period 2025-Q3"
+    "demo": "brc plm:items:load --dir fixtures/plm/items && brc plm:bom:load --dir fixtures/plm/boms && brc mfg:wc:load --file fixtures/mfg/work_centers.csv && brc mfg:routing:load --dir fixtures/mfg/routings && brc mfg:routing:capcheck --item PROD-100 --rev B --qty 1000 && brc mfg:wi:render --item PROD-100 --rev B && brc mfg:spc:analyze --op OP-200 --window 50 && brc mfg:yield --period 2025-09 && brc mfg:mrp --demand artifacts/sop/allocations.csv --inventory fixtures/mfg/inventory.csv --pos fixtures/mfg/open_pos.csv && brc mfg:coq --period 2025-Q3",
+    "build:agent": "tsc -p agent/tsconfig.json",
+    "start:agent": "node agent/dist/index.js",
+    "check:addresses": "node tools/addresses.js"
   },
   "engines": {
     "node": ">=20"
@@ -53,7 +56,9 @@
     "eslint": "^9.12.0",
     "prettier": "^3.3.3",
     "husky": "^9.0.10",
-    "lint-staged": "^16.1.5"
+    "lint-staged": "^16.1.5",
+    "@types/node": "^20.14.9",
+    "typescript": "^5.4.5"
   },
   "lint-staged": {
     "*.{js,jsx,mjs,cjs,ts,tsx}": [
