--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,38 +1,27 @@
-name: ci
-on: [push, pull_request]
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with: { python-version: '3.11' }
-      - run: python -m pip install -U pip pytest jsonschema
-      - run: pytest -q
-      - name: Determinism smoke
-        run: |
-          python -m pip install .
-          brc plm:items:load --dir fixtures/plm/items
-          brc plm:bom:load --dir fixtures/plm/boms
-          A1=$(sha256sum artifacts/plm/items.json | cut -d' ' -f1)
-          A2=$(sha256sum artifacts/plm/items.json | cut -d' ' -f1)
-          test "$A1" = "$A2"
-      - name: Contract validation
-        run: python scripts/validate_contracts.py
-      - name: Artifacts hash
-        run: bash scripts/hash_artifacts.sh || true
+name: CI
 
-  build-test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with: { node-version: '20' }
-      - run: npm ci --prefix apps/api
-      - run: npm run build --prefix apps/api
-      - run: npm test --prefix apps/api --if-present
-      - name: Upload API dist
-        uses: actions/upload-artifact@v4
-        with:
-          name: api-dist
-          path: apps/api/dist
+on:
+  push:
+    branches:
+      - main
+      - release/*
+  pull_request:
+
+permissions:
+  contents: read
+
+jobs:
+  lint:
+    uses: ./.github/workflows/reusable-node20.yml
+    with:
+      run: npm run lint || pnpm lint || yarn lint
+
+  typecheck:
+    uses: ./.github/workflows/reusable-node20.yml
+    with:
+      run: npm run typecheck || pnpm typecheck || yarn typecheck
+
+  test:
+    uses: ./.github/workflows/reusable-node20.yml
+    with:
+      run: npm test -- --ci --reporters=default || pnpm test -- --ci --reporters=default || yarn test --ci --reporters=default
