--- a/br-products-site/package.json
+++ b/br-products-site/package.json
@@ -17,10 +17,11 @@
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "eslint": "^9.10.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.5",
     "prettier": "^3.3.3",
     "typescript": "^5.5.4",
-    "vitest": "^2.0.5"
+    "vitest": "^2.0.5",
+    "@eslint/js": "^8.57.0"
   }
 }
