fix: remove inline comments from env sample

--- a/srv/blackroad-api/.env.sample
+++ b/srv/blackroad-api/.env.sample
@@ -1,10 +1,14 @@
 <!-- FILE: srv/blackroad-api/.env.sample -->
 # Sample environment for BlackRoad API
 PORT=4000
-SESSION_SECRET=change_me           # cookie-session secret
+# cookie-session secret
+SESSION_SECRET=change_me
 DB_PATH=/srv/blackroad-api/blackroad.db
 LLM_URL=http://127.0.0.1:8000/chat
-ALLOW_SHELL=false                  # enable /api/exec
-ALLOW_ORIGINS=                     # comma-separated list
-INTERNAL_TOKEN=change_me           # internal auth token
+# enable /api/exec
+ALLOW_SHELL=false
+# comma-separated list
+ALLOW_ORIGINS=
+# internal auth token
+INTERNAL_TOKEN=change_me
 BILLING_DISABLE=false
