--- a/.github/workflows/cpq-approval-digest.yml
+++ b/.github/workflows/cpq-approval-digest.yml
@@ -9,4 +9,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with: { node-version: '20' }
-      - run: node scripts/cpq/report.ts
+      - name: Install TypeScript runner
+        run: npm install --global ts-node typescript
+      - name: Generate digest
+        run: ts-node scripts/cpq/report.ts
