fix: run warehouse workflows with node js scripts

--- a/.github/workflows/bi-publish.yml
+++ b/.github/workflows/bi-publish.yml
@@ -8,4 +8,5 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with: { node-version: '20' }
-      - run: node scripts/warehouse/bi_publish.ts
+      - run: npm ci
+      - run: node scripts/warehouse/bi_publish.js
