--- a/.github/workflows/warehouse-lineage.yml
+++ b/.github/workflows/warehouse-lineage.yml
@@ -9,4 +9,5 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with: { node-version: '20' }
-      - run: node scripts/warehouse/lineage_build.ts
+      - run: npm ci
+      - run: node scripts/warehouse/lineage_build.js
