--- a/.github/workflows/warehouse-elt.yml
+++ b/.github/workflows/warehouse-elt.yml
@@ -9,7 +9,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with: { node-version: '20' }
-      - run: node scripts/warehouse/ingest.ts
-      - run: node scripts/warehouse/stage.ts
-      - run: node scripts/warehouse/model.ts
-      - run: node scripts/warehouse/metrics_snapshot.ts
+      - run: npm ci
+      - run: node scripts/warehouse/ingest.js
+      - run: node scripts/warehouse/stage.js
+      - run: node scripts/warehouse/model.js
+      - run: node scripts/warehouse/metrics_snapshot.js
