fix: restore okta auth and privacy scripts

--- a/.github/workflows/privacy-retention.yml
+++ b/.github/workflows/privacy-retention.yml
@@ -9,4 +9,4 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with: { node-version: '20' }
-      - run: node scripts/privacy/purge.ts
+      - run: node scripts/privacy/purge.js
