--- a/.github/workflows/privacy-reports.yml
+++ b/.github/workflows/privacy-reports.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with: { node-version: '20' }
-      - run: node scripts/privacy/monthly_report.ts
+      - run: node scripts/privacy/monthly_report.js
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "chore(privacy): monthly report"
