--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "better-sqlite3": "^9.4.3",
     "stripe": "^12.18.0",
     "ethers": "^6.10.0",
-    "yaml": "^2.3.4"
+    "yaml": "^2.3.4",
+    "mustache": "^4.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
